# FJSP

./: .gitignore  CMakeLists.txt  Chromosome.cpp  Chromosome.h  Job.cpp  Job.h  main.cpp  object.json
chart_making/: main.py  requirements.txt
